teams and player

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import plIcon from "../assets/img/logo-pl.webp";
 ---
 
-<nav class="mx-auto flex justify-between items-center max-w-7xl py-4">
+<nav class="flex justify-between items-center mx-20 py-4">
   <img src={plIcon.src} alt="logo" class="w-32" />
   <nav class="gap-x-10 flex flex-row">
     <a href="/">Home</a>
