--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import teams from "../const/teams";
+import Table from '../components/Table'
 ---
 
 <Layout title="Premier League">
@@ -38,7 +39,7 @@ import teams from "../const/teams";
       </div>
     </div>
     <div class="col-span-1 flex flex-col gap-4 my-10">
-      <div class="h-3/5 bg-gray-800 rounded-md">table1</div>
+      <div class="h-3/5 bg-gray-800 rounded-md"><Table /></div>
       <div class="h-2/5 bg-gray-800 rounded-md">table2</div>
     </div>
   </div>
