--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Table from '../components/Table'
     </div>
     <div class="col-span-1 flex flex-col gap-4 my-10">
       <div class="h-3/5 bg-gray-800 rounded-md"><Table /></div>
-      <div class="h-2/5 bg-gray-800 rounded-md">table2</div>
+      <div class="h-2/5 bg-gray-800 rounded-md"><button class="btn"></button></div>
     </div>
   </div>
   <div class="bg-gray-800 flex justify-between items-center mx-20">
