--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,14 +39,16 @@ import Table from "../components/Table";
       </div>
     </div>
     <div class="col-span-1 flex flex-col gap-4 my-10">
-      <div class="h-3/5 rounded-md"><Table client:load/></div>
+      <div class="h-3/5 rounded-md"><Table client:load /></div>
       <div class="h-2/5 rounded-md"></div>
     </div>
+
+    <div class="bg-gray-800 col-span-4 w-full h-10 flex justify-between items-center">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
   </div>
-  <div class="bg-gray-800 flex justify-between items-center mx-20">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-  </div>
+  
 </Layout>
